First Policy for SecurityManager of the Demo App. It still creates parsing problems